# cmake-template

./: CMakeLists.txt  README.md
project/android/: toolchain.cmake
project/linux/: toochain.cmake
project/macos/: toolchain.cmake
src/: main.cpp
src/shared_module/: CMakeLists.txt
src/static_module/: CMakeLists.txt
tests/: CMakeLists.txt  unit_test.cpp
